# allelo-mcp

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  example_config.yaml  handlers.md
src/: lib.rs  main.rs  testutil.rs
src/api/: mod.rs
src/api/client/: mod.rs
src/api/llm/: mod.rs
src/api/server/: axum_support.rs  broker.rs  config.rs  handlers.rs  mod.rs  tests.rs  translator.rs  transport.rs
src/client/: mod.rs
src/client/halo/: mod.rs
src/mcp/: mod.rs  service.rs  test_service.rs  tool.rs
src/service/: mod.rs
tests/: integration.rs
