[package]
name = "allelo-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "*", features = ["server", "transport-io", "transport-sse-server", "server"] }
tokio = { version = "1", features = [ "full" ] }
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
anyhow = "*"
axum = { version = "*", features = [ "tokio", "http1", "http2", "macros" ] }
axum-server = "*" 
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
serde_yaml_ng = "*"
tower-http = { version = "*", features = [ "cors", "trace" ] }
problem_details = { version = "*", features = [ "serde", "json", "axum" ] }
http = "*"
tower = "*"
uuid = "*"
tokio-stream = "*"
futures-util = "*"
